--- a/package.json
+++ b/package.json
@@ -77,5 +77,6 @@
   "bugs": {
     "url": "https://github.com/MarkTriesCoding/Portfolio/issues"
   },
-  "homepage": "https://github.com/MarkTriesCoding/Portfolio#readme"
+  "homepage": "https://github.com/MarkTriesCoding/Portfolio#readme",
+  "main": "server.js"
 }
