--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongo": "^0.1.0",
     "mongoose": "^5.11.5",
     "node": "^12.16.3",
+    "node-pre-gyp": "^0.17.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
